# py-orthongonal-connector-routing

./: .gitignore  .mypi.ini  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
src/orthogonalrouting/: Common.py  __init__.py
src/orthogonalrouting/algorithm/: CollisionDetection.py  IOrthogonalPathFinder.py  OrthogonalPathFinder.py
src/orthogonalrouting/enumerations/: ConnectorOrientation.py  SearchAlgorithm.py
src/orthogonalrouting/graph/: Edge.py  Graph.py  GraphEdge.py  GraphVertex.py  Node.py  Nodes.py
src/orthogonalrouting/graph/bst/: IPriorityBST.py  PriorityBST.py
src/orthogonalrouting/graph/interfaces/: IEdge.py  IGraph.py  INode.py
src/orthogonalrouting/graph/priorityqueue/: CustomPriorityQueue.py  IPriorityQueue.py  InvalidOperationException.py  PriorityQueue.py  SimplePriorityQueue.py
src/orthogonalrouting/graph/shortestpathalgorithm/: DijkstraAlgorithm.py  ISearchAlgorithm.py
src/orthogonalrouting/models/: AlgorithmResults.py  Connection.py  IInput.py  Point.py  ShortestGraphPath.py  ShortestPath.py
src/orthogonalrouting/models/internalModels/: CollisionData.py
src/orthogonalrouting/models/logicModels/: Connector.py
tests/demo/: DemoDiagramFrame.py  DemoItem.py  DemoOrthogonalRouting.py  DemoPriorityQueueApp.py  DiagramGenerator.py  OrthogonalPathFinderAdapter.py
tests/orthogonalrouting/: TestCSharpEnumerationBehavior.py  TestListDifference.py
tests/orthogonalrouting/graph/: TestNodes.py
tests/orthogonalrouting/graph/bst/: TestPriorityBST.py
tests/resources/: testLoggingConfiguration.json
(+8 files in other folders)
