[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name='orthogonalrouting'
dynamic = ["version"]
description = 'Python Implementation of aN Orthogonal Routing Algorithm'
readme = "README.md"
license = {text = 'GNU AFFERO GENERAL PUBLIC LICENSE'}
authors = [{name = 'Humberto A. Sanchez II', email = 'Humbert.A.Sanchez.II@gmail.com'}]
maintainers = [{name = 'Humberto A. Sanchez II', email = 'Humbert.A.Sanchez.II@gmail.com'}]
keywords = ['layout', 'diagram', 'routing', 'python',]

dependencies = [
    'codeallybasic>=1.3.1',
]

[project.urls]
Repository = 'https://github.com/hasii2011/py-orthongonal-connector-routing'


[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
pyfdl = ['py.typed']

[tool.setuptools.dynamic]
version = {attr = 'orthogonalrouting.__version__'}
